<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_core">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:backgroundTint="#19FFFFFF"
            app:cardCornerRadius="@dimen/_14sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linear_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/calendar_ic"
                    android:contentDescription="@string/cd_date_ic" />

                <LinearLayout
                    android:id="@+id/linear_layout_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/date"
                        android:textColor="@color/grey_font"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="15 December 2023"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_training"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:backgroundTint="#19FFFFFF"
            app:cardCornerRadius="@dimen/_14sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_date">

            <LinearLayout
                android:id="@+id/linear_layout_training"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/training_icon"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_training_ic"
                    android:src="@drawable/training_icon" />

                <LinearLayout
                    android:id="@+id/linear_layout_training2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/training"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/types_of_workout"
                        android:textColor="@color/grey_font"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/txt_training"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="10-Minute Push-Ups"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cv_training"
            tools:layout_editor_absoluteX="21dp">

            <RelativeLayout
                android:id="@+id/relative_layout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/relative_layout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_reps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#19FFFFFF"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linear_layout_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_16sdp"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_12sdp">

                        <ImageView
                            android:id="@+id/reps_icon"
                            android:layout_width="@dimen/_26sdp"
                            android:layout_height="@dimen/_26sdp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/cd_reps_ic"
                            android:src="@drawable/muscle_icon" />

                        <TextView
                            android:id="@+id/reps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/repetition"
                            android:textColor="@color/grey_font"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/txt_reps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="12 reps"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/relative_layout1"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#19FFFFFF"
                    app:cardCornerRadius="@dimen/_14sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/linear_layout_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_16sdp"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_12sdp">

                        <ImageView
                            android:id="@+id/time_icon"
                            android:layout_width="@dimen/_26sdp"
                            android:layout_height="@dimen/_26sdp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/cd_time_ic"
                            android:src="@drawable/stopwatch_icon" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/total_time"
                            android:textColor="@color/grey_font"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/txt_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="10 Min"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="#33FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_layout" />

        <TextView
            android:id="@+id/txt_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/workout_video"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="7dp"
            android:background="#E8FB7A"
            app:layout_constraintBottom_toTopOf="@+id/card_view_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_video" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_video"
            android:layout_width="360dp"
            android:layout_height="640dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_16sdp"
            android:backgroundTint="#19FFFFFF"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_4sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <androidx.media3.ui.PlayerView
                android:id="@+id/workout_video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_play_pause"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:backgroundTint="@color/black"
                    android:gravity="center"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:cornerRadius="@dimen/_100sdp"
                    app:icon="@drawable/baseline_play_arrow_24"
                    app:iconSize="@dimen/_22sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>