<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_core"
    tools:context=".views.authentication.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="WO.AI"
            android:textColor="#E8FB7A"
            android:textSize="@dimen/_40sdp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email_address"
            android:textColor="@color/grey_font"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            app:boxBackgroundColor="#19FFFFFF"
            app:boxStrokeColor="@color/grey_font"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_login">

            <com.bangkit.woai.customview.MyEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/grey_font"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="@color/grey_font"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_email_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            app:boxBackgroundColor="#19FFFFFF"
            app:boxStrokeColor="@color/grey_font"
            app:boxStrokeWidth="@dimen/_2sdp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey_font"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_login">

            <com.bangkit.woai.customview.MyPasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/grey_font"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/grey_font"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password_login" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_31sdp"
            android:layout_marginTop="@dimen/_58sdp"
            android:layout_marginEnd="@dimen/_31sdp"
            android:backgroundTint="#E8FB7A"
            android:fontFamily="@font/poppins_bold"
            android:padding="@dimen/_6sdp"
            android:text="Login"
            android:textColor="#161616"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password_login" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/or"
            android:textColor="@color/grey_font"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_31sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_31sdp"
            android:backgroundTint="#E8FB7A"
            android:fontFamily="@font/poppins_bold"
            android:padding="@dimen/_6sdp"
            android:text="@string/register"
            android:textColor="#161616"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <!--    <com.bangkit.woai.customview.MyAuthButton-->
        <!--        android:id="@+id/registerBtn"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="@dimen/_45sdp"-->
        <!--        android:layout_marginStart="@dimen/_31sdp"-->
        <!--        android:layout_marginTop="@dimen/_40sdp"-->
        <!--        android:layout_marginEnd="@dimen/_31sdp"-->
        <!--        android:backgroundTint="#E8FB7A"-->
        <!--        android:enabled="false"-->
        <!--        android:fontFamily="@font/poppins_bold"-->
        <!--        android:padding="@dimen/_6sdp"-->
        <!--        android:text="LOGIN"-->
        <!--        android:textColor="#161616"-->
        <!--        android:textSize="@dimen/_14ssp"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/layout_password_login" />-->


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="@dimen/_108sdp"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>